Milestone 1 part 1 finished!
: )